--- a/_posts/algo/rmq/2013-03-15-rmq.md
+++ b/_posts/algo/rmq/2013-03-15-rmq.md
@@ -4,6 +4,93 @@ title: "RMQ"
 description: ""
 category: algorithm
 tags: [algo, data structure]
-published: false
 ---
 {% include JB/setup %}
+
+
+定义
+-----
+RMQ 是 Range Minimum Query的缩写, 查询区间最值.
+
+特征
+-----
+RMQ 可以在O(nlog(n))的时间复杂度内建力起一种要稀疏表的结构.
+然后可以在常数时间复杂度内进行查询.
+
+关键数据结构
+------------
+对与数组a, d[i][j] 表示a[i] 到 a[i + 2^j -1] 上的最小值.
+
+显然有   
+    d[i][j] = a[i]  if j == 0   
+    d[i][j] = min{d[i][j-1], d[i + 2^(j-1)][j-1]}  if j > 0
+
+查询
+-----
+数组a在区间(x1,x2)上的最小值
+
+min(d[x1, k], d[x2- 2^k + 1][k])   k 是log2(x2-x1).
+
+代码
+--------
+
+d[i][j]的初始化
+--------------
+
+    for (int i = 0; i < n; ++i) {
+            dp[i][0] = a[i];
+        }
+
+    for (int j = 1; (1 << j) <= m; ++j) {
+        int len = 1 << j;
+        for (int i = n - len; i > -1 ; --i) {
+            dp[i][j] = min(dp[i][j - 1], dp[i + (len >> 1)][j - 1]);
+        }
+    }
+
+查询k1到k2上的最小值
+------------------
+
+    int j = 0;
+    while ((k2 + 1 - k1) >> j)
+        ++j;
+    --j;
+    rmin = min(dp[k1][j], dp[k2 + 1 - (1 << j)][j]);
+
+总结
+-----
+RMQ 适用与不修改, 多次查询的情况.
+
+
+应用举例
+--------
+*   [poj 3264 Balanced Lineup][1]
+
+    题目大意(抽象过的): 求区间最大值-区间最小值.
+
+    这是一个裸的rmq问题.
+
+    代码在[这里][2].
+
+*   [poj 3368 Frequent values][3]
+
+    题目大意, 有很多已经排好序的数, 每个数可能出现多次, 求在某个区间上出现频率最多的数.
+
+    这个题目稍做转化即可.
+    统计每个数出现的次数.
+    然后求出区间所在的为k1, k2.
+
+    判断左边的数是否为区间的开始, 如果不是 k1 = k1 + 1;
+    判断右边的数是否为区间的终止, 如果不是 k2 = k2 - 1;
+
+    求出区间k1, k2上的最大值, 然后再判断边界是否出现的次数较多.
+
+    特殊情况, 就是k1, k2在一个区间.
+
+    代码这[这里][4].
+
+
+[1]: http://poj.org/problem?id=3264 "Balanced Lineup"
+[2]: https://github.com/fly2best/oj/blob/master/poj/rmq/rmq_Balanced_lineup_3264.cc
+[3]: http://poj.org/problem?id=3368 "Frequent values"
+[4]: https://github.com/fly2best/oj/blob/master/poj/rmq/rmq_Balanced_lineup_3264.cc
