--- a/_posts/algo/rmq/2013-03-15-rmq.md
+++ b/_posts/algo/rmq/2013-03-15-rmq.md
@@ -41,7 +41,7 @@ d[i][j]的初始化
             dp[i][0] = a[i];
         }
 
-    for (int j = 1; (1 << j) <= m; ++j) {
+    for (int j = 1; (1 << j) <= n; ++j) {
         int len = 1 << j;
         for (int i = n - len; i > -1 ; --i) {
             dp[i][j] = min(dp[i][j - 1], dp[i + (len >> 1)][j - 1]);
